--- a/index.html
+++ b/index.html
@@ -24,30 +24,30 @@
     <div class="profile">
       <img src="unknown.png" alt="" class="imgone">
       <h2 class="smalltext">Hello.</h2>
-      <p>I'm a web designer / developer from Turin, Italy. I have a passion for web design and love to create for web and mobile devices.</p>
+      <p class="specialptwo">I'm a web designer / developer from Turin, Italy. I have a passion for web design and love to create for web <br>and mobile devices.</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="" src="programming.gif" alt="">
+        <img class="poop" src="programming.gif" alt="">
         <h3>Degins & Development</h3>
-        <p>I started being interested in web development back in 2018 and <a href="https://github.com/anasolomon"target="
+        <p class="specialptwo">I started being interested in web development back in 2018 and <a href="https://github.com/anasolomon"target="
         ">here</a> you can find all my projects on the subject so far.</p>
       </div>
-      <div class="skill-row">
-        <img class="" src="" alt="">
+      <div class="skill-row pisstwo">
+        <img class="piss" src="book.jpg" alt="">
         <h3>Interesting book writer </h3>
-        <p>In 2019 I started writing my very first book "The Story of Aberun" made out of a thrilling mix between the psychological and fantasy genre.</p>
+        <p class="specialptwo">In 2019 I started writing my very first book "The Story of Aberun" made out of a thrilling mix between the psychological and fantasy genre.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3 class="smalltext">Are you curious about my book?</h3>
-      <p>If you love web developing or writing as much as I do let's talk about it! We can code togeher while gathering
+      <p class="specialptwo">If you love web developing or writing as much as I do let's talk about it! We can code togeher while gathering
         inspiration for our next books.</p>
-      <a class="btn" href="mailto:anamariatanasciuc@email.com">CONTACT ME</a>
+      <a  class="btn" href="mailto:anamariatanasciuc@email.com">CONTACT ME</a>
     </div>
   </div>
 
@@ -59,7 +59,7 @@
     ">Twitter</a>
     <a class="footer-link" href="https://anasolomon.github.io/anamariatanasciuc/" target="
     ">Website</a>
-    <p>© 2018 Ana-Maria Tanasciuc @Angela Yu.</p>
+    <p class="special">© 2018 Ana-Maria Tanasciuc @Angela Yu.</p>
   </div>
 
 </body>
