--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Ana-Maria Tanasciuc</title>
   <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="favicon.ico" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Sacramento&display=swap" rel="stylesheet">
 </head>
